@@ -1988,6 +1988,7 @@
 61) kernel: net: wext: fix message delay/ordering.<br>
 62) kernel: net: fix use after free in the recvmmsg exit path.<br>
 63) kernel: net: force inlining of netif_tx_start/stop_queue, sock_hold, __sock_put.<br>
+64) kernel: net: route: do not cache fib route info on local routes with oif.<br>
 <br>
 <br>
 <br>
